<resources>
    <string name="app_name">Sensors Tracker</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="service_name">ReadingSensors</string>
    <string name="start_btn">Start tracker</string>
    <string name="stop_btn">Stop tracker</string>
    <string name="txt_view_title_GPSTracker">Track GPS Values</string>
    <string name="txt_view_title_accelerometer">Track Accelerometer Values</string>
    <string name="edit_text_port_hint">Enter port</string>
    <string name="edit_text_IP_hint">Enter IP</string>
    <string name="Notification_title">Sensors tracker</string>
    <string name="Notification_subject">App currently tracking sensors</string>
    <string name="action_library">Licenses</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="EditIPPref">Enter server IP</string>
    <string name="EditPortPref">Enter server Port</string>
    <string name="cat1TitlePref">Server settings</string>
    <string name="cat2TitlePref">Accelerometer settings</string>
    <string name="port">Port</string>
    <string name="settings_summary">$1</string>
    <string name="title_activity_settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_GPS_title">Activate GPS?</string>
    <string name="dialog_sensors_unavailable">No sensor checked</string>
    <string name="cat3TitlePref">Location Service GPS Settings</string>
    <string name="minTime">Minimum time</string>
    <string name="minTimeSum">Minimum time interval for notifications in ms</string>
    <string name="minDistance">Minimum distance</string>
    <string name="minDistanceSum">Minimum distance interval for notifications in meters</string>
    <string name="seekbarDialog">Sensor delay</string>
    <string name="seekbarSum">Enter sensor speed</string>
    <string name="seekbarTitle">Sensor speed</string>
    <string name="action_changelog">Changelog</string>
    <string name="license_description">This app was written by José G.C. </string>
    <string name="changelog_full_title">Change Log</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">More…</string>
    <string name="dialog_set_IP">Set an IP value in settings menu</string>
    <string name="dialog_set_port">Set a Port Value in settings menu</string>
    <string name="dialog_setIPPort">Set IP and Port values in settings menu</string>
    <string name="stopServiceToast">No service running</string>
</resources>
