<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <com.rey.material.widget.Button
            style="@style/RaiseWaveButtonRippleStyle"
            android:id="@+id/start_btn"
            android:layout_width="150dp"
            android:layout_height="@dimen/bt_height"


            android:textColor="#FF000000"
            android:layout_gravity="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
            android:text="@string/start_btn"/>


        <com.rey.material.widget.Button
            style="@style/RaiseWaveButtonRippleStyle"
            android:id="@+id/stop_btn"
            android:layout_width="150dp"
            android:layout_height="@dimen/bt_height"
            android:layout_margin="15dp"
            android:layout_gravity="center"

            android:textColor="#FF000000"

            android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
            android:text="@string/stop_btn"/>



        <com.rey.material.widget.CheckBox
            android:id="@+id/checkbox_gps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/txt_view_title_GPSTracker"
            android:textSize="14sp"
            android:checked="true"
            android:gravity="center_vertical"/>


        <com.rey.material.widget.CheckBox
            android:id="@+id/checkbox_accelerometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_view_title_accelerometer"
            android:textSize="14sp"
            android:checked="true"
            android:gravity="center_vertical"/>




    </LinearLayout>
    </ScrollView>

</LinearLayout>
